--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
-#div1{
-	width:80px;
-	height:80px;
-	color: dodgerblue;
+body{
+	background-color: grey;
+}
+
+#div1 {
+  background-color: lightgrey;
+  width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
 }
