--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ h1{
 	color: azure;
 }
 
-.list1{
-	font-size: 20px;
-	color: azure;
-	margin-left: 5%;
+text{
 	
+	font-size: 60px;
+	
+}
 }
 
 #p1{
